--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -28,3 +28,144 @@ body {
     color: #222649;
     overflow: hidden;
 }
+.container{
+    width: 960px;
+}
+.bg_color {
+    border-left: 3px solid #222649;
+    min-height: 100vh;
+    width: 100vw;
+}
+.photo_wrap {
+    width: 180px;
+    height: 180px;
+    background-size: cover;
+    border-radius: 50%;
+    border: 4px solid #FFF;
+}
+.photo_box {
+    width: 184px;
+    height: 184px;
+    padding: 2px;
+    border-radius: 50%;
+    overflow: hidden;
+    background: linear-gradient(to right, #7f49e5, #F44336, #814ae9);
+    margin: 0 auto;
+}
+.attr {
+    font-size: 15px;
+    padding-right: 10px;
+    display: inline-block;
+}
+.attr span {
+    font-size: 18px;
+    font-weight: 700;
+}
+.uptake-btn{
+    box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+    font-size: 20px;
+    cursor: pointer;
+    display: inline-block;
+    margin: 0 auto;
+    font-size: 14px;
+    padding: 5px 35px;
+    bottom: 3px;
+    margin-left: 50px;
+    font-weight: 700;
+    transition: .3s all ease-in-out;
+}
+.uptake-btn.disabled:hover{
+    text-decoration: none;
+    background: linear-gradient(98.22deg, #6A3AB0 1.3%, #854DF3 96.68%);
+    color:#FFFFFF;
+}
+.uptake-btn.enabled{
+    background: linear-gradient(98.22deg, #6A3AB0 1.3%, #854DF3 96.68%);
+    color: white;
+    position: absolute;
+    bottom: 5px;
+}
+.uptake-btn.enabled:hover{
+    text-decoration: none;
+    background: #FFFFFF;
+    color:#6e3dbb;
+}
+.uptake-btn.disabled{
+    border: 1px solid #6e3dbb;
+    background: #fff;
+    color: #6e3dbb;
+    font-weight: 700;
+}
+.profile_card {
+    text-align: center;
+    background-color: #fdfdfd;
+    box-shadow: -30px 20px 50px rgba(0, 0, 0, 0.4), 30px -20px 50px rgba(0, 0, 0, 0.4);
+    width: 100%;
+    padding: 25px;
+}
+.mt10 {margin-top: 10px;}
+.mt40 {margin-top: 40px;}
+.mb10 { margin-bottom: 10px;}
+.title {position: relative; font-size: 24px;}
+.post_card{width: 100%;
+    height: 300px;
+    overflow: hidden;
+    cursor: pointer;
+    margin-bottom: 30px;}
+.post_card img {height: 100%; width:auto;}
+.w700{font-weight:700;}
+.t20{font-size:20px; margin-top:20px;}
+.post_pop_card{width: 800px;width: 800px;background: #fff;margin: 0 auto;margin-top: 10%;}
+.date{font-size:12px; color:#ccc;}
+.mt20{margin-top:20px;}
+.mr15{margin-right: 5px;}
+.smallImg{width: 30px; height: 30px;border-radius: 50%; margin-right: 10px;}
+.ptr15{padding-right: 15px;}
+.grid-wrapper{display: grid;grid-template-columns: 500px 400px;}
+.col-one{grid-column: 1/1;}
+.col-two{grid-column: 2/2;background: #fff;padding: 15px;}
+.postimg img{width: 100%; width: 100%; object-fit: cover; height: 532px;}
+.comment_items{height: 300px;overflow-y: scroll;}
+.floatleft{float: left;margin-right: 10px;margin-top: 4px;width: 35px;height: 35px;}
+.model-body{padding:0px;}
+.modal-title {margin: 0;line-height: 1.42857143;font-weight: 700;font-size: 16px;position: absolute;}
+.c999{color:#999;}
+.fright{float: right;}
+.fitem{position:relative;}
+.littleFollow{float: right;padding: 4px 8px;font-size: 12px;position: absolute;right: 0;}
+#followingModal .modal-body {max-height: 500px;overflow-y: scroll;}
+.relative{position: relative;}
+.textFollowing{margin-left: 75px; font-weight: 700; font-size: 15px;}
+.fitem p{position: relative}
+.fitem p i{color: #333;float: right;font-weight: 700;bottom: 8px;position: absolute;right: 0;}
+.like, .like span, like i{color: #F41567; margin-left: 0;}
+.likepost:hover{color: #F41567;}
+
+#commentForm{
+    border-top: 1px solid #ccc;
+    padding-top: 10px;
+    margin-top: 15px;
+    display: flex;
+}
+#commentForm input{background: 0 0;border: 0;
+    color: #262626;
+    font-size: inherit;
+    height: 18px;
+    max-height: 80px;
+    outline: 0;
+    padding: 0;
+    resize: none;
+    width: 335px;}
+#commentForm button{
+    border:0;
+    background: none;
+    font-weight: 700;
+}
+#commentForm button:disabled{
+    color:#ccc;
+}
+#commentForm button:enabled{
+    color:#6638BE;
+}
+.btn-outline-secondary{border:1px solid; margin-left: 50px;}
