needed to pull something

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -141,9 +141,15 @@
             </div>
             <div class="seperator seperatorSlide"></div>
             <div class="slide-search-container">
+                <div class="slide-search-container-user">
 
+                </div>
+                <div class="slide-search-container-post">
+                    
+                </div>
                 <div id="slide-search-spinner" class="loading-spinner"></div>
-
+            </div>
+            
             </div>
         </div>
 
@@ -162,6 +168,13 @@
                     </div>
                 </a>
             </div>
+        </div>
+    </div>
+
+    <div class="modal-Pop-Up-Window">
+
+        <div class="modal-pop-up-window-container">
+
         </div>
     </div>
 </body>
