--- a/src/main/resources/templates/admin/adminUsers.html
+++ b/src/main/resources/templates/admin/adminUsers.html
@@ -9,6 +9,7 @@
     <title>Admin panel</title>
     <!--    <link href="/docs/4.4/dist/css/bootstrap.min.css" rel="stylesheet"-->
     <!--          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
+    <style>.mr5{display: inline-block; margin-right: 15px;}</style>
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark shadow">
@@ -71,19 +72,27 @@
             <div class="table-responsive">
                 <table class="table table-striped table-sm">
                     <thead>
-                    <tr>
+                    <tr align="center">
                         <th>User Id</th>
                         <th>User Name</th>
                         <th>Role</th>
+                        <th>Follower</th>
+                        <th>Following</th>
                         <th>Status</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="usere: ${users}">
-                        <td th:text="${usere.id}" />
-                        <td th:text="${usere.username}" />
-                        <td th:text="${usere.role}" />
-                        <td th:text="${usere.status}" />
+                    <tr th:each="usere: ${users}" class="userList" align="center">
+                        <td th:text="${usere.id}"/>
+                        <td th:text="${usere.getUsername()}"/>
+                        <td >
+<!--                            <div th:if="${usere.getRole() != null}">-->
+                            <span th:each="role: ${usere.getRole()}" th:text="${role.getRoleName()}" class="mr5"></span>
+<!--                            </div>-->
+                        </td>
+                        <td th:text="${usere.getFollowedUsers().size()}"/>
+                        <td th:text="${usere.getFollowingUser().size()}"/>
+                        <td th:text="${(usere.status) ? 'Active' : 'Deactive'}"/>
                     </tr>
                     </tbody>
                 </table>
