--- a/src/main/resources/templates/advertisement/createAd.html
+++ b/src/main/resources/templates/advertisement/createAd.html
@@ -84,7 +84,12 @@
 <!--                </div>-->
             </div>
         </div>
-        <input type="datetime-local" name="created" style="display: none;"/>
+        <div class="form-group">
+            <label for="targetCountry">Target Country</label>
+            <select multiple class="form-control" id="targetCountry" name="targetCountry">
+                <option th:each="country : ${countries}" th:value="${country.id}" th:text="${country.countryName}" ></option>
+            </select>
+        </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
