--- a/src/main/resources/templates/admin/adminPosts.html
+++ b/src/main/resources/templates/admin/adminPosts.html
@@ -8,6 +8,17 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <title>Admin panel</title>
+    <style>
+        /*table{width:100%;}*/
+        /*table td, table th { border: 1px solid grey;}*/
+        /*table th { background: #eee;}*/
+        .pagination-div{user-select: none;}
+        .pagination-div span{border-radius:3px;border:1px solid #999;
+            padding:5px;margin:10px 0px 0px 10px;display:inline-block}
+        span.selected{background:#ccf;}
+        .mt40{margin-top:20px;}
+        .pb40{padding-top: 20px;}
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark shadow">
@@ -24,6 +35,12 @@
         <nav class="col-md-2 d-none d-md-block bg-light sidebar">
             <div class="sidebar-sticky">
                 <ul class="nav flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/admin">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
+                            Home <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/admin/users">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -62,8 +79,8 @@
             </div>
         </nav>
 
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-            <h2>Post List</h2>
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 pb40">
+            <h2 th:text="#{message.admin.postlisttitle}" class="mt40"></h2>
             <div class="table-responsive">
                 <table class="table table-striped table-sm">
                     <thead>
@@ -78,18 +95,49 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="poste: ${posts}" class="postList" align="center">
-                        <td th:text="${poste.id}" />
-                        <td th:text="${poste.title}" />
-                        <td th:text="${poste.created}" />
-                        <td th:text="${poste.getUser() != null ? poste.getUser().getId() : 'No userId'}" />
-                        <td th:text="${(poste.isUnhealthy) ? 'Yes' : 'No'}"></td>
-                        <td th:text="${poste.status}" class="status"></td>
-                        <td><input type="button" class="submit" th:postId="${poste.id}" value="Disable/Enable"></td>
+                    <tr th:each="postpage: ${postPages}" class="postList" align="center">
+                        <td th:text="${postpage.id}" />
+                        <td th:text="${postpage.title}" />
+                        <td th:text="${postpage.created}" />
+                        <td th:text="${postpage.getUser() != null ? postpage.getUser().getId() : 'No userId'}" />
+                        <td th:text="${(postpage.isUnhealthy) ? 'Yes' : 'No'}"></td>
+                        <td th:text="${postpage.status}" class="status"></td>
+                        <td><input type="button" class="submit" th:postId="${postpage.id}" value="Disable/Enable"></td>
 
                     </tr>
                     </tbody>
                 </table>
+                <div class="pagination-div">
+                    <span th:if="${postPages.hasPrevious()}">
+                        <a th:href="@{/admin/posts(page=${postPages.number-1},size=${postPages.size})}">Previous</a>
+                     </span>
+                    <th:block th:each="i: ${#numbers.sequence(0, postPages.totalPages - 1)}">
+                        <span th:if="${postPages.number == i}" class="selected">[[${i}+1]]</span>
+                        <span th:unless="${postPages.number == i}">
+                            <a th:href="@{/admin/posts(page=${i},size=${postPages.size})}">[[${i}+1]]</a>
+                        </span>
+                    </th:block>
+                    <span th:if="${postPages.hasNext()}">
+                        <a th:href="@{/admin/posts(page=${postPages.number+1},size=${postPages.size})}">Next</a>
+                    </span>
+                </div>
+<!--                <div class="pagination-div">-->
+<!--                        <span th:if="${postPages.hasPrevious()}">-->
+<!--                            <a th:href="'/admin/users/' + ${user.id} + '?page=' + ${postPages.number-1} + '&size=' + ${postPages.size}">Previous</a>-->
+
+<!--                         </span>-->
+<!--                    <th:block th:each="i: ${#numbers.sequence(0, postPages.totalPages - 1)}">-->
+<!--                        <span th:if="${postPages.number == i}" class="selected">[[${i}+1]]</span>-->
+<!--                        <span th:unless="${postPages.number == i}">-->
+<!--&lt;!&ndash;                                <a th:href="@{/admin/users/(${user.id})(page=${i},size=${postPages.size})}">[[${i}+1]]</a>&ndash;&gt;-->
+<!--                                <a th:href="'/admin/users/' + ${user.id} + '?page=' + ${i} + '&size=' + ${postPages.size}">[[${i}+1]]</a>-->
+<!--                            </span>-->
+<!--                    </th:block>-->
+<!--                    <span th:if="${postPages.hasNext()}">-->
+
+<!--                            <a th:href="'/admin/users/' + ${user.id} + 'page=' + ${postPages.number+1} + '&size=${postPages.size}">Next</a>-->
+<!--                        </span>-->
+<!--                </div>-->
             </div>
         </main>
     </div>
