--- a/src/main/resources/templates/admin/viewUser.html
+++ b/src/main/resources/templates/admin/viewUser.html
@@ -11,7 +11,17 @@
     <style>.mr5 {
         display: inline-block;
         margin-right: 15px;
-    }</style>
+
+    }
+
+        /*table{width:100%;}*/
+        /*table td, table th { border: 1px solid grey;}*/
+        /*table th { background: #eee;}*/
+        .pagination-div{user-select: none;}
+        .pagination-div span{border-radius:3px;border:1px solid #999;
+            padding:5px;margin:10px 0px 0px 10px;display:inline-block}
+        span.selected{background:#ccf;}
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark shadow">
@@ -28,6 +38,17 @@
         <nav class="col-md-2 d-none d-md-block bg-light sidebar">
             <div class="sidebar-sticky">
                 <ul class="nav flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/admin">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                 stroke-linejoin="round" class="feather feather-home">
+                                <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                                <polyline points="9 22 9 12 15 12 15 22"></polyline>
+                            </svg>
+                            Home <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/admin/users">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -70,7 +91,7 @@
         </nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-            <h3 align="center">Users Information</h3>
+            <h4 align="center">Users Information</h4>
             <div class="table-responsive">
                 <table class="table table-striped table-sm">
                     <thead>
@@ -107,7 +128,10 @@
                 </table>
             </div>
             <br>
-            <h3 align="center">Post Lists</h3>
+            <!--            <h4 align="left" style="display: inline-block; width: 130px; height: 10px">Post Lists</h4>-->
+            <!--            <div th:text="${user.postList.size()}" style="width: 100px; display: inline-block;"></div>-->
+            <span>Post Lists : total = </span>
+            <span th:text="${user.postList.size()}"> </span>
             <div class="table-responsive">
                 <table class="table table-striped table-sm">
                     <thead>
@@ -122,22 +146,61 @@
                     </tr>
                     </thead>
                     <tbody>
-<!--                    <div th:if="${postList() != null}">-->
-                        <tr th:each="post: ${user.postList}" class="postList" align="center">
-                            <td th:text="${post.id}"/>
-                            <td th:text="${post.title}"/>
-                            <td th:text="${post.created}"/>
-                            <td th:text="${post.getUser() != null ? post.getUser().getId() : 'No userId'}"/>
-                            <td th:text="${(post.isUnhealthy) ? 'Yes' : 'No'}"></td>
-                            <td th:text="${post.status}" class="status"></td>
-                            <!--                            <td><input type="button" class="submit" th:postId="${post.id}" value="Disable/Enable"></td>-->
-                        </tr>
-<!--                    </div>-->
+                    <!--                    <div th:if="${postList() != null}">-->
+                    <tr th:each="post: ${postPages}" class="postList" align="center">
+                        <td th:text="${post.id}"/>
+                        <td th:text="${post.title}"/>
+                        <td th:text="${post.created}"/>
+                        <td th:text="${post.getUser() != null ? post.getUser().getId() : 'No userId'}"/>
+                        <td th:text="${(post.isUnhealthy) ? 'Yes' : 'No'}"></td>
+                        <td th:text="${post.status}" class="status"></td>
+                        <!--                            <td><input type="button" class="submit" th:postId="${post.id}" value="Disable/Enable"></td>-->
+                    </tr>
+                    <!--                    </div>-->
                     </tbody>
+<!--                    <div>-->
+<!--                        <div th:if="${postPages?.totalPages > 1}">-->
+<!--                            <nav class="pagination is-rounded" role="navigation" aria-label="pagination">-->
+<!--                                <ul class="pagination-list">-->
+
+<!--                                    <li th:each="page : ${pages}">-->
+<!--                                        <a th:href="'/admin/users/' + ${user.id} + '?page=' + ${page}"-->
+<!--                                           th:text=${page}-->
+<!--                                           class="pagination-link "-->
+<!--                                           th:classappend="${page==postPages.number + 1} ? is-current">-->
+<!--                                        </a>-->
+<!--                                    </li>-->
+
+<!--                                </ul>-->
+<!--                            </nav>-->
+<!--                        </div>-->
+<!--                    </div>-->
+
                 </table>
+                <div class="pagination-div">
+                        <span th:if="${postPages.hasPrevious()}">
+                            <a th:href="'/admin/users/' + ${user.id} + '?page=' + ${postPages.number-1} + '&size=' + ${postPages.size}">Previous</a>
+
+                         </span>
+                    <th:block th:each="i: ${#numbers.sequence(0, postPages.totalPages - 1)}">
+                        <span th:if="${postPages.number == i}" class="selected">[[${i}+1]]</span>
+                        <span th:unless="${postPages.number == i}">
+<!--                                <a th:href="@{/admin/users/(${user.id})(page=${i},size=${postPages.size})}">[[${i}+1]]</a>-->
+                                <a th:href="'/admin/users/' + ${user.id} + '?page=' + ${i} + '&size=' + ${postPages.size}">[[${i}+1]]</a>
+                            </span>
+                    </th:block>
+                    <span th:if="${postPages.hasNext()}">
+
+                            <a th:href="'/admin/users/' + ${user.id} + '?page=' + ${postPages.number+1} + '&size=' + ${postPages.size}">Next</a>
+                        </span>
+                </div>
             </div>
             <br>
-            <h3 align="center">Comment Lists</h3>
+
+            <!--            <h4 align="left">Comment Lists</h4>-->
+            <!--            <div th:text="${comments.size()}"></div>-->
+            <span>Comment Lists : total = </span>
+            <span th:text="${comments.size()}"> </span>
             <div class="table-responsive">
                 <table class="table table-striped table-sm">
                     <thead>
